--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -32,17 +32,17 @@
         <div class="category">
             <h2>🚗 Штрафы и ГИБДД</h2>
             <div class="modules-grid">
-                <a href="/modules/shtraf-gibdd.html" class="card"><h3>🚗 Штраф ГИБДД — скидка 50%</h3><p>Проверьте скидку и получите текст для оплаты</p><span class="price">99₽</span></a>
-                <a href="/modules/zhaloba-shtraf.html" class="card"><h3>⚖️ Жалоба на штраф ГИБДД</h3><p>Оспаривание неправомерного штрафа</p><span class="price">249₽</span></a>
-                <a href="/modules/doverennost-avto.html" class="card"><h3>📝 Доверенность на автомобиль</h3><p>Для ГИБДД и МФЦ</p><span class="price">199₽</span></a>
+                <a href="/pwa-35-docs/modules/shtraf-gibdd.html" class="card"><h3>🚗 Штраф ГИБДД — скидка 50%</h3><p>Проверьте скидку и получите текст для оплаты</p><span class="price">99₽</span></a>
+                <a href="/pwa-35-docs/modules/zhaloba-shtraf.html" class="card"><h3>⚖️ Жалоба на штраф ГИБДД</h3><p>Оспаривание неправомерного штрафа</p><span class="price">249₽</span></a>
+                <a href="/pwa-35-docs/modules/doverennost-avto.html" class="card"><h3>📝 Доверенность на автомобиль</h3><p>Для ГИБДД и МФЦ</p><span class="price">199₽</span></a>
             </div>
         </div>
         <div class="category">
             <h2>👨‍👩‍👧 Семья и дети</h2>
             <div class="modules-grid">
-                <a href="/modules/alimenty.html" class="card"><h3>👶 Алименты 2026</h3><p>Расчет по средней зарплате региона</p><span class="price">299₽</span></a>
-                <a href="/modules/dogovor-nyanya.html" class="card"><h3>👩‍👧 Договор с няней</h3><p>Трудовой договор с графиком</p><span class="price">299₽</span></a>
-                <a href="/modules/soglasie-rebenok.html" class="card"><h3>🛂 Согласие на выезд ребенка</h3><p>За границу и по РФ</p><span class="price">149₽</span></a>
+                <a href="/pwa-35-docs/modules/alimenty.html" class="card"><h3>👶 Алименты 2026</h3><p>Расчет по средней зарплате региона</p><span class="price">299₽</span></a>
+                <a href="/pwa-35-docs/modules/dogovor-nyanya.html" class="card"><h3>👩‍👧 Договор с няней</h3><p>Трудовой договор с графиком</p><span class="price">299₽</span></a>
+                <a href="/pwa-35-docs/modules/soglasie-rebenok.html" class="card"><h3>🛂 Согласие на выезд ребенка</h3><p>За границу и по РФ</p><span class="price">149₽</span></a>
             </div>
         </div>
     </div>
