--- a/index.html
+++ b/index.html
@@ -1,60 +1,104 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>35 PWA-генераторов документов</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <title>35 генераторов документов</title>
+    <link rel="stylesheet" href="/pwa-35-docs/css/style.css">
+    <link rel="manifest" href="/pwa-35-docs/manifest.json">
     <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; font-family: -apple-system, sans-serif; }
-        body { background: #f5f7fb; }
-        .hero { background: linear-gradient(135deg, #0b63e5, #1a4c9c); color: white; padding: 40px 20px; text-align: center; }
-        .hero h1 { font-size: 32px; margin-bottom: 10px; }
-        .search-input { width: 100%; max-width: 500px; padding: 15px 25px; border: none; border-radius: 50px; font-size: 16px; }
-        .categories { max-width: 1200px; margin: 0 auto; padding: 30px 20px; }
-        .category h2 { font-size: 24px; margin-bottom: 20px; color: #1e293b; border-left: 4px solid #0b63e5; padding-left: 15px; }
-        .modules-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 20px; }
-        .card { background: white; border-radius: 16px; padding: 20px; text-decoration: none; color: inherit; box-shadow: 0 2px 8px rgba(0,0,0,0.05); transition: 0.2s; }
-        .card:hover { transform: translateY(-3px); box-shadow: 0 12px 20px rgba(11,99,229,0.1); }
-        .card h3 { font-size: 18px; margin-bottom: 8px; color: #0f172a; }
-        .card p { font-size: 14px; color: #64748b; margin-bottom: 12px; }
-        .price { display: inline-block; background: #eef2ff; color: #0b63e5; padding: 6px 14px; border-radius: 30px; font-weight: 600; }
+        .modules-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 15px;
+            padding: 20px;
+        }
+        .module-card {
+            background: #f5f5f5;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            padding: 15px;
+            text-align: center;
+            transition: transform 0.2s;
+        }
+        .module-card:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+        .module-card a {
+            text-decoration: none;
+            color: #333;
+            font-weight: 500;
+        }
     </style>
 </head>
 <body>
-    <div class="hero">
-        <h1>⚖️ Юридические документы за 1 минуту</h1>
-        <p>35 генераторов — оплата после расчета</p>
-        <input type="search" id="search" placeholder="🔍 Найти документ..." class="search-input">
-    </div>
+    <header>
+        <h1>Генераторы документов</h1>
+        <p>Всего доступно модулей: 32</p>
+    </header>
 
-    <div class="categories">
-        <div class="category">
-            <h2>🚗 Штрафы и ГИБДД</h2>
-            <div class="modules-grid">
-                <a href="/pwa-35-docs/modules/shtraf-gibdd.html" class="card"><h3>🚗 Штраф ГИБДД — скидка 50%</h3><p>Проверьте скидку и получите текст для оплаты</p><span class="price">99₽</span></a>
-                <a href="/pwa-35-docs/modules/zhaloba-shtraf.html" class="card"><h3>⚖️ Жалоба на штраф ГИБДД</h3><p>Оспаривание неправомерного штрафа</p><span class="price">249₽</span></a>
-                <a href="/pwa-35-docs/modules/doverennost-avto.html" class="card"><h3>📝 Доверенность на автомобиль</h3><p>Для ГИБДД и МФЦ</p><span class="price">199₽</span></a>
-            </div>
+    <main>
+        <div class="modules-grid" id="modules-container">
+            <!-- Сюда будут добавлены модули через JavaScript -->
         </div>
-        <div class="category">
-            <h2>👨‍👩‍👧 Семья и дети</h2>
-            <div class="modules-grid">
-                <a href="/pwa-35-docs/modules/alimenty.html" class="card"><h3>👶 Алименты 2026</h3><p>Расчет по средней зарплате региона</p><span class="price">299₽</span></a>
-                <a href="/pwa-35-docs/modules/dogovor-nyanya.html" class="card"><h3>👩‍👧 Договор с няней</h3><p>Трудовой договор с графиком</p><span class="price">299₽</span></a>
-                <a href="/pwa-35-docs/modules/soglasie-rebenok.html" class="card"><h3>🛂 Согласие на выезд ребенка</h3><p>За границу и по РФ</p><span class="price">149₽</span></a>
-            </div>
-        </div>
-    </div>
+    </main>
 
     <script>
-        document.getElementById('search').addEventListener('input', function(e) {
-            let query = e.target.value.toLowerCase();
-            document.querySelectorAll('.card').forEach(card => {
-                let text = card.textContent.toLowerCase();
-                card.style.display = text.includes(query) ? 'block' : 'none';
-            });
+        // Список всех модулей (автоматически сгенерирован)
+        const modules = [
+                '<li><a href="/pwa-35-docs/modules/alimenty.html">Alimenty</a></li>',
+                '<li><a href="/pwa-35-docs/modules/aviakompensaciya.html">Aviakompensaciya</a></li>',
+                '<li><a href="/pwa-35-docs/modules/dogovor-kruzhok.html">Договор Kruzhok</a></li>',
+                '<li><a href="/pwa-35-docs/modules/dogovor-nyanya.html">Договор Nyanya</a></li>',
+                '<li><a href="/pwa-35-docs/modules/dogovor-repetitor.html">Договор Repetitor</a></li>',
+                '<li><a href="/pwa-35-docs/modules/doverennost-avto.html">Doverennost Avto</a></li>',
+                '<li><a href="/pwa-35-docs/modules/ip-usn6.html">Ip Usn6</a></li>',
+                '<li><a href="/pwa-35-docs/modules/kudir.html">Kudir</a></li>',
+                '<li><a href="/pwa-35-docs/modules/nizhe-tarifa.html">Nizhe Tarifa</a></li>',
+                '<li><a href="/pwa-35-docs/modules/pereraschet-zhkh.html">Pereraschet Zhkh</a></li>',
+                '<li><a href="/pwa-35-docs/modules/pretenziya-internet.html">Pretenziya Internet</a></li>',
+                '<li><a href="/pwa-35-docs/modules/pretenziya-tehnika.html">Pretenziya Tehnika</a></li>',
+                '<li><a href="/pwa-35-docs/modules/protokol-tszh.html">Protokol Tszh</a></li>',
+                '<li><a href="/pwa-35-docs/modules/putevoy-list.html">Putevoy List</a></li>',
+                '<li><a href="/pwa-35-docs/modules/raspiska-telefon.html">Raspiska Telefon</a></li>',
+                '<li><a href="/pwa-35-docs/modules/shtatnoe-raspisanie.html">Shtatnoe Raspisanie</a></li>',
+                '<li><a href="/pwa-35-docs/modules/shtraf.html">Shtraf</a></li>',
+                '<li><a href="/pwa-35-docs/modules/shtraf-gibdd.html">Shtraf Gibdd</a></li>',
+                '<li><a href="/pwa-35-docs/modules/soglasie-rebenok.html">Soglasie Rebenok</a></li>',
+                '<li><a href="/pwa-35-docs/modules/spravka-sadik.html">Spravka Sadik</a></li>',
+                '<li><a href="/pwa-35-docs/modules/subsidiya-zhkh.html">Subsidiya Zhkh</a></li>',
+                '<li><a href="/pwa-35-docs/modules/template.html">Template</a></li>',
+                '<li><a href="/pwa-35-docs/modules/vozvrat-tura.html">Vozvrat Tura</a></li>',
+                '<li><a href="/pwa-35-docs/modules/zaderzhka-reysa.html">Zaderzhka Reysa</a></li>',
+                '<li><a href="/pwa-35-docs/modules/zhaloba-autoservice.html">Жалоба Autoservice</a></li>',
+                '<li><a href="/pwa-35-docs/modules/zhaloba-bank.html">Жалоба Bank</a></li>',
+                '<li><a href="/pwa-35-docs/modules/zhaloba-detsad.html">Жалоба Detsad</a></li>',
+                '<li><a href="/pwa-35-docs/modules/zhaloba-shtraf.html">Жалоба Shtraf</a></li>',
+                '<li><a href="/pwa-35-docs/modules/zhaloba-strahovaya.html">Жалоба Strahovaya</a></li>',
+                '<li><a href="/pwa-35-docs/modules/zhaloba-svyaz.html">Жалоба Svyaz</a></li>',
+                '<li><a href="/pwa-35-docs/modules/zhaloba-taksi.html">Жалоба Taksi</a></li>',
+                '<li><a href="/pwa-35-docs/modules/zhaloba-uk.html">Жалоба Uk</a></li>',
+        ];
+
+        // Загружаем модули на страницу
+        const container = document.getElementById('modules-container');
+        modules.forEach(moduleHtml => {
+            container.innerHTML += moduleHtml;
         });
+
+        // Регистрируем Service Worker для PWA
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/pwa-35-docs/sw.js')
+                    .then(registration => {
+                        console.log('ServiceWorker успешно зарегистрирован');
+                    })
+                    .catch(err => {
+                        console.log('Ошибка регистрации ServiceWorker: ', err);
+                    });
+            });
+        }
     </script>
 </body>
 </html>
