add: META-тег подтверждения Енот

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
+    <meta name="enot-verification" content="60eb2b90">
     <meta charset="UTF-8">
     <title>35 генераторов документов</title>
     <style>
@@ -69,3 +70,4 @@
     </ul>
 </body>
 </html>
+
