fix: добавлена ссылка на отказ от ответственности

--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
         <li><a href="modules/zhaloba-taksi.html">Жалоба на такси</a></li>
         <li><a href="modules/zhaloba-uk.html">Жалоба в УК</a></li>
     </ul>
+<footer style="text-align: center; margin-top: 40px; padding: 20px; background: #f0f0f0; border-radius: 8px;">
+    <a href="/pwa-35-docs/disclaimer.html">Отказ от ответственности</a>
+</footer>
 </body>
 </html>
+
 
 
